--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,43 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context="com.sumera.argallery.ui.main.MainActivity">
+	android:layout_height="match_parent">
 
-	<TextView
-		android:layout_width="wrap_content"
+	<android.support.design.widget.TabLayout
+		android:id="@+id/main_tabs"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:text="Hello World!"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent"/>
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent">
 
+		<android.support.design.widget.TabItem
+			android:id="@+id/main_allTab"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Left"/>
+
+		<android.support.design.widget.TabItem
+			android:id="@+id/main_favouriteTab"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Center"/>
+
+		<android.support.design.widget.TabItem
+			android:id="@+id/main_filteredTab"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Right"/>
+
+	</android.support.design.widget.TabLayout>
+
+	<fragment
+		android:id="@+id/fragment"
+		android:name="com.sumera.argallery.ui.feature.picturelist.PictureListFragment"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/main_tabs"/>
 </android.support.constraint.ConstraintLayout>
