PIcture details screen

--- a/app/src/main/res/layout/fragment_pictures_with_info.xml
+++ b/app/src/main/res/layout/fragment_pictures_with_info.xml
@@ -7,11 +7,11 @@
 	android:layout_height="match_parent">
 
 	<android.support.constraint.Guideline
-		android:id="@+id/pictureList_guidline"
+		android:id="@+id/pictureList_guideline"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal"
-		app:layout_constraintGuide_percent="0.4"/>
+		app:layout_constraintGuide_percent="0.2"/>
 
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/pictureList_infoRecycler"
@@ -22,13 +22,13 @@
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"/>
 
-	<android.support.v7.widget.RecyclerView
+	<com.yarolegovich.discretescrollview.DiscreteScrollView
 		android:id="@+id/pictureList_imageRecycler"
-		android:layout_width="402dp"
+		android:layout_width="0dp"
 		android:layout_height="0dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="@+id/pictureList_guidline"/>
+		app:layout_constraintTop_toTopOf="@+id/pictureList_guideline"/>
 
 </android.support.constraint.ConstraintLayout>
