--- a/app/src/main/res/layout/view_holder_picture_info.xml
+++ b/app/src/main/res/layout/view_holder_picture_info.xml
@@ -7,10 +7,26 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<TextView
-		android:id="@+id/pictureInfoItem_title"
+	<LinearLayout
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="test"/>
+		android:layout_gravity="center"
+		android:padding="16dp"
+		android:orientation="vertical">
+
+		<TextView
+			android:id="@+id/pictureInfoItem_title"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="test"/>
+
+		<TextView
+			android:id="@+id/pictureInfoItem_price"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="test"/>
+
+	</LinearLayout>
+
 
 </FrameLayout>
