--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 	android:layout_height="match_parent">
 
 	<android.support.v7.widget.Toolbar
-		android:id="@+id/toolbar"
+		android:id="@+id/main_toolbar"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:background="@color/colorPrimary"
@@ -21,6 +21,7 @@
 			android:text="@string/app_name"/>
 		
 		<ImageView
+			android:id="@+id/main_filterIcon"
 			android:layout_width="24dp"
 			android:layout_height="24dp"
 			android:layout_gravity="right|center_vertical"
@@ -46,7 +47,7 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="0.0"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/toolbar">
+		app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
 
 		<android.support.design.widget.TabItem
 			android:id="@+id/main_allTab"
@@ -67,4 +68,13 @@
 			android:text="Right"/>
 
 	</android.support.design.widget.TabLayout>
+
+
+	<FrameLayout
+		android:id="@+id/main_filterTabContainer"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
