--- a/app/src/main/res/layout/fragment_picture_detail.xml
+++ b/app/src/main/res/layout/fragment_picture_detail.xml
@@ -2,13 +2,13 @@
 <com.sothree.slidinguppanel.SlidingUpPanelLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:sothree="http://schemas.android.com/apk/res-auto"
-	android:id="@+id/sliding_layout"
+	android:id="@+id/pictureDetail_slidingLayout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:gravity="bottom"
-	sothree:umanoPanelHeight="68dp"
+	sothree:umanoPanelHeight="88dp"
 	sothree:umanoShadowHeight="4dp"
-	sothree:umanoScrollableView="@id/pictureDetail_description"
+	sothree:umanoScrollableView="@id/pictureDetail_descriptionContainer"
 	sothree:umanoParallaxOffset="100dp"
 	sothree:umanoDragView="@id/pictureDetail_bottomPanelContainer">
 
@@ -21,26 +21,52 @@
 	<LinearLayout
 		android:id="@+id/pictureDetail_bottomPanelContainer"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="match_parent"
 		android:orientation="vertical">
 
 		<FrameLayout
-			android:id="@+id/pictureDetail_bottomPanelHeader"
+			android:id="@+id/pictureDetail_swipeIndicator"
 			android:layout_width="match_parent"
-			android:layout_height="80dp">
+			android:layout_height="wrap_content">
 
 			<ImageView
-				android:id="@+id/pictureDetail_favourite"
-				android:layout_width="40dp"
-				android:layout_height="40dp"
-				android:src="@drawable/ic_favourite_empty"/>
+				android:id="@+id/pictureDetail_swipeIndicatorArrow"
+				android:layout_width="24dp"
+				android:layout_height="24dp"
+				android:layout_gravity="center"
+				android:src="@drawable/ic_arrow_up"/>
 
 		</FrameLayout>
 
-		<ScrollView
-			android:id="@+id/pictureDetail_description"
+		<LinearLayout
+			android:id="@+id/pictureDetail_bottomPanelHeader"
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
+			android:layout_height="64dp"
+			android:padding="16dp"
+			android:orientation="horizontal">
+
+			<TextView
+				android:id="@+id/pictureDetail_title"
+				android:layout_width="0dp"
+				android:layout_height="match_parent"
+				android:layout_weight="1"
+				android:gravity="center_vertical|left"
+				android:textColor="@color/white"
+				android:maxLines="1"/>
+
+			<ImageView
+				android:id="@+id/pictureDetail_favourite"
+				android:layout_width="32dp"
+				android:layout_height="32dp"
+				android:layout_gravity="center_vertical"
+				android:src="@drawable/ic_favourite_empty"/>
+
+		</LinearLayout>
+
+		<ScrollView
+			android:id="@+id/pictureDetail_descriptionContainer"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -48,43 +74,18 @@
 				android:orientation="vertical">
 
 				<TextView
+					android:id="@+id/pictureDetail_description"
 					android:layout_width="match_parent"
-					android:layout_height="200dp"
+					android:layout_height="wrap_content"
 					android:gravity="center|top"
 					android:text="The Awesome Sliding Up Panel"
 					android:textSize="16sp"
-					android:background="@color/colorAccent"/>
-
-				<TextView
-					android:layout_width="match_parent"
-					android:layout_height="200dp"
-					android:gravity="center|top"
-					android:text="The Awesome Sliding Up Panel"
-					android:textSize="16sp"
-					android:background="@color/colorAccent"/>
-
-				<TextView
-					android:layout_width="match_parent"
-					android:layout_height="200dp"
-					android:gravity="center|top"
-					android:text="The Awesome Sliding Up Panel"
-					android:textSize="16sp"
-					android:background="@color/colorAccent"/>
-
-				<TextView
-					android:layout_width="match_parent"
-					android:layout_height="200dp"
-					android:gravity="center|top"
-					android:text="The Awesome Sliding Up Panel"
-					android:textSize="16sp"
-					android:background="@color/colorAccent"/>
+					android:textColor="@color/white"/>
 
 			</LinearLayout>
 
 		</ScrollView>
 
 	</LinearLayout>
-
-
 
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
