--- a/app/src/main/res/layout/view_holder_picture_list_loading.xml
+++ b/app/src/main/res/layout/view_holder_picture_list_loading.xml
@@ -8,9 +8,10 @@
 	android:layout_height="match_parent">
 
 	<com.wang.avi.AVLoadingIndicatorView
-		android:layout_width="40dp"
-		android:layout_height="40dp"
+		android:layout_width="80dp"
+		android:layout_height="80dp"
 		android:layout_gravity="center"
-		app:indicatorName="LineScaleIndicator" />
+		app:indicatorName="LineScaleIndicator"
+		app:indicatorColor="@color/colorAccent"/>
 
 </FrameLayout>
