--- a/app/src/main/res/layout/view_holder_picture_list_picture.xml
+++ b/app/src/main/res/layout/view_holder_picture_list_picture.xml
@@ -9,7 +9,7 @@
 
 	<android.support.v7.widget.CardView
 		android:id="@+id/pictureListItem_card"
-		android:layout_width="wrap_content"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_margin="4dp"
 		android:layout_gravity="center"
@@ -18,10 +18,9 @@
 		<ImageView
 			android:id="@+id/pictureListItem_image"
 			android:scaleType="fitCenter"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:adjustViewBounds="true"
-			android:background="@color/colorPrimary"/>
+			android:adjustViewBounds="true"/>
 
 	</android.support.v7.widget.CardView>
 
