--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:textColor="@color/white"
 			android:text="@string/app_name"/>
 		
 		<ImageView
@@ -53,19 +54,19 @@
 			android:id="@+id/main_allTab"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="Left"/>
+			android:text="@string/main_all_tab"/>
 
 		<android.support.design.widget.TabItem
 			android:id="@+id/main_favouriteTab"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="Center"/>
+			android:text="@string/main_favourites_tab"/>
 
 		<android.support.design.widget.TabItem
 			android:id="@+id/main_filteredTab"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="Right"/>
+			android:text="@string/main_filter_tab"/>
 
 	</android.support.design.widget.TabLayout>
 
