--- a/app/src/main/res/layout/view_holder_picture_info.xml
+++ b/app/src/main/res/layout/view_holder_picture_info.xml
@@ -8,7 +8,7 @@
 	android:layout_height="match_parent">
 
 	<LinearLayout
-		android:layout_width="wrap_content"
+		android:layout_width="220dp"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:padding="16dp"
@@ -18,13 +18,14 @@
 			android:id="@+id/pictureInfoItem_title"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="test"/>
+			android:layout_gravity="left"
+			android:textSize="18dp"/>
 
 		<TextView
-			android:id="@+id/pictureInfoItem_price"
+			android:id="@+id/pictureInfoItem_author"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="test"/>
+			android:textSize="16dp"/>
 
 	</LinearLayout>
 
